--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Dependencies/brotli"]
 	path = Dependencies/brotli
-	url = git@github.com:google/brotli.git
+	url = https://github.com/google/brotli.git
